fixed external path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&family=Covered+By+Your+Grace&family=Londrina+Shadow&family=Poller+One&display=swap" rel="stylesheet">
     
-    <script src="/assets/js/jquery-3.6.1.min.js"></script>
+    <script src="assets/js/jquery-3.6.1.min.js"></script>
     <title>Salik's Website</title>
     <style>
     body {
@@ -14,10 +14,10 @@
         opacity: 0;
         width: 150px;
         height: 150px;
-        padding: 5px;
+        padding: 2px;
         border-radius: 100px;
-        border: 2px broken black;
-        top: 35%;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        top: 30%;
         left: 50%;
         position: absolute;
         transform: translate(-50%, -50%);
@@ -34,6 +34,7 @@
         text-align: center;
         transform: translate(-50%, -50%);
         border: 2px solid black;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         border-radius: 80px;
         animation: fadeInOut 2.4s linear;
     }
@@ -87,7 +88,7 @@
         <div class="welcomeBorder"></div>
         <h5 class="welcomeText">HI! Welcome to my site!</h5>
         <div class="rotating">
-        <img src="/assets/images/profile.jpg">
+        <img src="assets/images/profile.jpg">
         </div>
     </div>
   <div class="main">
