--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
         100% {opacity: 0}
     }
 
+    .particle {
+        position: absolute;
+        border-radius: 50%;
+    }
+
+	@keyframes particleanim{
+        0% {opacity: 0; background: rgb(141, 141, 141);}
+        12% {opacity: 0.5;} 
+		10% {background: black;}
+        90% {top: -30%;}
+        90% {opacity: 0.5;}
+        100% {opacity: 0; background:rgb(141, 141, 141);}
+    }
+
+	.particle{
+        opacity: 0;
+        position: absolute;
+        border-radius: 100%;
+	}
+
 
     </style>
 
@@ -94,21 +114,44 @@
   <div class="main">
     <button class="debug">test</button>
   </div>
-
+  <div id="particle-container">
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+	<div class="particle"></div>
+</div>
 <script>
 
 $(".debug").click(function() {
   $("h1").toggle();
 });
 
-
-$(document).ready(function(){
+ $(document).ready(function(){
       setTimeout(function(){
         $("body").css("animation", "fadeIn 0.5s linear");
         $("body").css("background-color", "rgb(141, 141, 141)");
-      }, 3000);
+    }, 2000);
  })
 
+ function randomNumber(min, max) { 
+    return Math.random() * (max - min) + min;
+} 
+
+ const particles = document.getElementById('particle-container').getElementsByTagName('*');
+    for (const p of particles) {
+        p.style.animation = "particleanim "+randomNumber(40,60)+"s infinite";
+        p.style.animationDelay = ""+randomNumber(1,20)+"s";
+        var size = ""+randomNumber(5,20)+"px";
+        p.style.height = size;
+        p.style.width = size;
+        p.style.top = "500px";
+        p.style.left = ""+randomNumber(0,500)+"px";
+    
+    }
 
 </script>
 </body>
