--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     }
 
     .portfolioBox{
-        /* position: absolute; */
+        position: absolute;
         top: 250px;
         left: -500px;
         width: 1000px;
@@ -121,7 +121,8 @@
         position: absolute;
         left: 50%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        color: black;
+        text-align: center;
+        color: gray;
     }
 
     .blogBox{
@@ -139,7 +140,8 @@
         position: absolute;
         left: 50%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        color: black; 
+        text-align: center;
+        color: gray; 
     }
 
     .aboutBox{
@@ -157,7 +159,8 @@
         position: absolute;
         left: 50%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        color: black; 
+        text-align: center;
+        color: gray; 
     }
     </style>
 
@@ -174,13 +177,13 @@
 
     </div>
     <div class="portfolioBox">
-        <h1 class="portfolioTitle">Projects</h1>
+        <h1 class="portfolioTitle">POJECTS</h1>
     </div>
     <div class="blogBox">
-        <h1 class="blogTitle">Blog</h1>
+        <h1 class="blogTitle">BLOG</h1>
     </div>
     <div class="aboutBox">
-        <h1 class="aboutTitle">More About Me!</h1>
+        <h1 class="aboutTitle">MORE ABOUT ME!</h1>
     </div>
     <div id="particle-container">
         <div class="particle"></div>
