updated header position

--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
     .portfolioTitle {
         opacity: 1;
         position: absolute;
-        left: 50%;
+        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        text-align: center;
         color: gray;
     }
 
@@ -138,9 +137,8 @@
     .blogTitle {
         opacity: 1;
         position: absolute;
-        left: 50%;
+        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        text-align: center;
         color: gray; 
     }
 
@@ -157,9 +155,8 @@
     .aboutTitle {
         opacity: 1;
         position: absolute;
-        left: 50%;
+        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
-        text-align: center;
         color: gray; 
     }
     </style>
@@ -177,7 +174,7 @@
 
     </div>
     <div class="portfolioBox">
-        <h1 class="portfolioTitle">POJECTS</h1>
+        <h1 class="portfolioTitle">PROJECTS</h1>
     </div>
     <div class="blogBox">
         <h1 class="blogTitle">BLOG</h1>
