--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     .portfolioTitle {
         opacity: 1;
         position: absolute;
-        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
+        text-align: center;
         color: gray;
     }
 
@@ -137,8 +137,8 @@
     .blogTitle {
         opacity: 1;
         position: absolute;
-        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
+        text-align: center;
         color: gray; 
     }
 
@@ -155,8 +155,8 @@
     .aboutTitle {
         opacity: 1;
         position: absolute;
-        left: 20%;
         font-family: 'Be Vietnam Pro', sans-serif;
+        text-align: center;
         color: gray; 
     }
     </style>
