updated blog section

--- a/index.html
+++ b/index.html
@@ -139,12 +139,19 @@
         }
         section .text-container{
             display: flex;
-        }
-        section .text-container .text-box{
-            margin: 20px;
+            margin: 0 auto;
+            font-size: 20px;
+            padding-top: 10px;
+            text-align: center;
+            vertical-align: middle;
+            background: #533634;
             padding: 20px;
-            background: #343753;
         }
+
+        section .text-container .text-box:hover{
+            background: #139e36;
+        }
+
         section .text-container .text-box h3{
             font-size: 30px;
             text-align: center;
@@ -191,7 +198,7 @@
       </section>
       <section>
         <div class="container reveal">
-            <h2>POJECTS</h2>
+            <h2>PROJECTS</h2>
             <div class="text-container">
                 <div class="text-box">
                   <h3>Exam Cheat Detection</h3>
