updated introductory text

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="main-content">
     <section>
         <h1 class="main-text">A Computer Science graduate who keeps contemplating on what useless app to develop next. From simple cat viewer, games, mobile stuffs, and utility programs, can't seem to stop 🤔.
-            </br> </br>My learnings are also recorded on my personal blog,</br> you can check them below.</output>
+            </br> </br>My learnings are also recorded on my personal blog,</br> you can check them below. Have fun!</output>
         </h1>
       </section>
       <section>
