--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
       max-height: 100vh;
       overflow-x: hidden;
       background-color: rgba(255,255,255,1);
+      background-image: radial-gradient(circle farthest-corner at center, rgba(124, 124, 124, 0.123) 27%, rgba(255, 255, 255, 0) 27%);
+      background-size: 2000px 2000px;
     }
 
-
+    /* pacity: 0.8;
+background-image:  linear-gradient(30deg, #444cf7 12%, transparent 12.5%, transparent 87%, #444cf7 87.5%, #444cf7), linear-gradient(150deg, #444cf7 12%, transparent 12.5%, transparent 87%, #444cf7 87.5%, #444cf7), linear-gradient(30deg, #444cf7 12%, transparent 12.5%, transparent 87%, #444cf7 87.5%, #444cf7), linear-gradient(150deg, #444cf7 12%, transparent 12.5%, transparent 87%, #444cf7 87.5%, #444cf7), linear-gradient(60deg, #444cf777 25%, transparent 25.5%, transparent 75%, #444cf777 75%, #444cf777), linear-gradient(60deg, #444cf777 25%, transparent 25.5%, transparent 75%, #444cf777 75%, #444cf777);
+background-size: 20px 35px;
+background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;o */
     @keyframes fadeInOutPic {
         0% {width: 10px; height: 150px; opacity: 0;}
         10% {width: 150px; height: 150px; opacity: 1;}
