--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;o */
       
     <section>
         <img class="HeaderImage" src="assets/images/bodyprofile.png">
-        <h1 class="main-text">Hi! I'm a Computer Science graduate who develops the most random things! From cat viewers, games, mobile stuffs, to utility programs 🤔. <br><br>You can check out my projects below! or stay and watch the bubbles.. most people usually do.
+        <h1 class="main-text">Hi! This website is a working in progress project, some features might not work at the moment. I'm a Computer Science graduate who develops the most random things! From cat viewers, games, mobile stuffs, to utility programs 🤔. <br><br>You can check out my projects below! or stay and watch the bubbles.. most people usually do.
         </h1>
       </section>
 
