--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <p>Contact me at <span style="color: rgb(129, 191, 241)">alfonso.salik@gmail.com</span>, or get in touch through the following.</p>
           </div>
           <div class="AboutContainer">
-            <a class="AboutIcon" href="https://github.com/Mohd-Salik" target="_blank">RESUME</a>
+            <a class="AboutIcon" href="resume.html" target="_blank">RESUME</a>
             <a class="AboutIcon" href="https://github.com/Mohd-Salik" target="_blank">GIT</a>
             <a class="AboutIcon" href="https://www.linkedin.com/in/mohammad-salik-b164b6203/" target="_blank">LINKEDIN</a>
             <a class="AboutIcon" href="https://www.facebook.com/kan9n/" target="_blank">FACEBOOK</a>
