--- a/index.html
+++ b/index.html
@@ -201,13 +201,14 @@
 
         .AboutContainer{
           display: inline-flex;
+          margin-top: 2vh;
           margin-left: 25%;
           width: 100%;
         }
 
         .AboutIcon{
           border: 1.5px solid rgba(255, 255, 255, 0.171);
-          border-radius: 20px;
+          border-radius: 5px;
           background: #ffffff05;
           font-family: 'Be Vietnam Pro', sans-serif;
           font-size: 17px;
@@ -217,6 +218,7 @@
           margin-right: 10px;
           text-decoration:none;
           color: white;
+          transition: 0.5s all ease;
         }
 
         .AboutIcon:hover{
