--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             border: 1.5px solid rgba(255, 255, 255, 0.13);
             border-radius: 20px;
             background: #ffffff18;
+            opacity: 0.8;
             backdrop-filter: blur(3px);
             width: 100%;
             height: 25vh;
@@ -105,8 +106,8 @@
         section:nth-child(3){
           border: 1.5px solid rgba(255, 255, 255, 0.13);
           border-radius: 20px;
-          background: #ffffff18;
-          backdrop-filter: blur(3px);
+          background: #59147418;
+          backdrop-filter: blur(2px);
           width: 100%;
           justify-content: center;
           margin-top: 20vh;
@@ -259,8 +260,7 @@
           left: 0px;
           top: 0px;
           height: 0%;
-          width: 200%;
-          margin-left: -50%;
+          width: 100%;
           position: absolute;
           opacity: 0;
         }
@@ -274,7 +274,7 @@
 
         .prjimages{
           width: auto;
-          height: 30vh;
+          height: 20vh;
           opacity: 0;
           transition: 0.3s all ease;
         }
@@ -285,6 +285,7 @@
           max-height: 100vh;
           height: auto\9;
           width: auto\9;
+          opacity: 0.75;
           padding-right: -500vh;
         }
 
@@ -307,6 +308,7 @@
           transform: rotate(180deg);
           height: 150px;
           z-index: 1;
+          opacity: 0.2;
           margin-top: -10vh;
           margin-left: -25vw;
           background-color:#0b1542;
@@ -314,12 +316,14 @@
 
         #mountain2 {
           z-index: 1;
+          opacity: 0.2;
           height: 500px;
           background-color:#394469;
           clip-path: polygon(0% 6px, 4.545454545454546% 23px, 9.090909090909092% 38px, 13.636363636363637% 35px, 18.181818181818183% 40px, 22.72727272727273% 52px, 27.272727272727277% 40px, 31.818181818181824% 25px, 36.36363636363637% 3px, 40.909090909090914% 6px, 45.45454545454546% 11px, 50.00000000000001% 8px, 54.545454545454554% 25px, 59.0909090909091% 32px, 63.63636363636365% 53px, 68.18181818181819% 62px, 72.72727272727273% 68px, 77.27272727272728% 48px, 81.81818181818183% 46px, 86.36363636363637% 62px, 90.90909090909092% 63px, 95.45454545454547% 67px, 100.00000000000001% 58px,100% 100%, 0 100%,0 100%) }
     
         #mountain3 {
           z-index: 2;
+          opacity: 0.6;
           height: 200px;
           margin-top: -200px;
           background-color:#0b1542;
